1.9.6:
* WebUI/Wallet: added "Copy to clipboard" action icons next addresses
* WebUI will show some erros now, if the page template files cannot be loaded (instead of a blank page)
* Tools/balio: Retry HTTP request if blockcypher.com server returns status code 429
* WebUI/Transactions: Clicking on peer's IP copies it into clipboard
* lib/utxo: use bufio.Writer for saving UTXO.db to disk
* Client/TextUI: New command "rd" to show recently disconnected peers
* Client: Hammering protection only kicks in after repeated re-connecting
* Client/TextUI: "saveutxo" command triggers slow saving now (not a rapid one)
* Client: Imporved resource usage when saving UTXO.db to disk
* Client: New config value "Memory.OldDataBackup" - move .dat files to "oldat/" instead of deleting
* Tools/balio: Fixed compatibility with recent API of blockchair.com
* "Memory.UseGoHeap" config value brought back
* peersdb.NewAddrFromString() resolves host names now, which has system-wise applications
* Source code from "modernc.org/memory" placed in "lib/others/memory" and used for UTXO records (with minor changes)
* Source code from "github.com/dchest/siphash" placed in "lib/others/siphash"
* Source code from "github.com/golang/snappy" placed in "lib/others/snappy"
* Source code from "golang.org/x/crypto/ripemd160" placed in "lib/others/ripemd160"

1.9.5 - 2018-12-31
* Client: By default native go heap is used for UTXO records. Memory.UseGoHeap config param removed.
* Client: By default support for cross-checking consensus rules against core's consensus lib is disabled.
* Tools/bdb - shows which blocks are actually stored on disk (for purged blocks db)
* Client: Reject "getheaders" and "getblocks" with more than 101 locators. Allow those without hash_stop
* Client: Added default Last Trusted Block hash also for testnet3
* Client: Allow non-zero tx counts inside "headers" message, for compatibility with the core client