@@ -40,7 +40,6 @@ func GetTxFromExplorer(txid *btc.Uint256, testnet bool) (rawtx []byte) {
 	return
 }
 
-
 // Download raw transaction from webbtc.com
 func GetTxFromWebBTC(txid *btc.Uint256) (raw []byte) {
 	url := "https://webbtc.com/tx/" + txid.String() + ".bin"
@@ -78,7 +77,6 @@ func GetTxFromBlockchainInfo(txid *btc.Uint256) (rawtx []byte) {
 	return
 }
 
-
 // Download (and re-assemble) raw transaction from blockcypher.com
 func GetTxFromBlockcypher(txid *btc.Uint256, currency string) (rawtx []byte) {
 	var r *http.Response
@@ -97,7 +95,7 @@ func GetTxFromBlockcypher(txid *btc.Uint256, currency string) (rawtx []byte) {
 		if r.StatusCode == 429 && try_cnt < 5 {
 			try_cnt++
 			println("Retry blockcypher.com in", try_cnt, "seconds...")
-			time.Sleep( time.Duration(try_cnt) * time.Second)
+			time.Sleep(time.Duration(try_cnt) * time.Second)
 			continue
 		}
 
@@ -119,11 +117,42 @@ func GetTxFromBlockcypher(txid *btc.Uint256, currency string) (rawtx []byte) {
 			fmt.Println("blockcypher.com StatusCode=", r.StatusCode)
 		}
 	}
-	if er != nil {
-	}
 	return
 }
 
+func GetTxFromBlockchair(txid *btc.Uint256, currency string) (rawtx []byte) {
+	var r *http.Response
+	var er error
+
+	r, er = http.Get("https://api.blockchair.com/" + currency + "/raw/transaction/" + txid.String())
+
+	if er != nil {
+		return
+	}
+	if r.StatusCode != 200 {
+		return
+	}
+
+	c, _ := ioutil.ReadAll(r.Body)
+	r.Body.Close()
+
+	var result struct {
+		Data map[string]struct {
+			Raw string `json:"raw_transaction"`
+		} `json:"data"`
+	}
+
+	er = json.Unmarshal(c, &result)
+	if er != nil {
+		return
+	}
+
+	if rec, ok := result.Data[txid.String()]; ok {
+		rawtx, er = hex.DecodeString(rec.Raw)
+	}
+
+	return
+}
 
 func verify_txid(txid *btc.Uint256, rawtx []byte) bool {
 	tx, _ := btc.NewTx(rawtx)
@@ -136,15 +165,21 @@ func verify_txid(txid *btc.Uint256, rawtx []byte) bool {
 
 // Download raw transaction from a web server (try one after another)
 func GetTxFromWeb(txid *btc.Uint256) (raw []byte) {
-	raw = GetTxFromExplorer(txid, false)
+	raw = GetTxFromBlockchair(txid, "bitcoin")
 	if raw != nil && verify_txid(txid, raw) {
-		//println("GetTxFromExplorer - OK")
+		//println("GetTxFromBlockchair - OK")
 		return
 	}
 
 	raw = GetTxFromWebBTC(txid)
 	if raw != nil && verify_txid(txid, raw) {
 		//println("GetTxFromWebBTC - OK")
+		return
+	}
+
+	raw = GetTxFromExplorer(txid, false)
+	if raw != nil && verify_txid(txid, raw) {
+		//println("GetTxFromExplorer - OK")
 		return
 	}
 
@@ -163,7 +198,6 @@ func GetTxFromWeb(txid *btc.Uint256) (raw []byte) {
 	return
 }
 
-
 // Download testnet's raw transaction from a web server
 func GetTestnetTxFromWeb(txid *btc.Uint256) (raw []byte) {
 	raw = GetTxFromExplorer(txid, true)
@@ -174,7 +208,7 @@ func GetTestnetTxFromWeb(txid *btc.Uint256) (raw []byte) {
 
 	raw = GetTxFromBlockcypher(txid, "btc-testnet")
 	if raw != nil && verify_txid(txid, raw) {
-		//println("GetTxFromBlockcypher - OK")
+		println("GetTxFromBlockcypher - OK")
 		return
 	}
 
